--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             text-align: center;
             color: #ff6347; /* Change header color to tomato */
             font-family: 'Georgia', serif;
+            font-size: 2.5em;
+            margin-top: 0;
         }
         h1 {
             font-size: 2.5em;
@@ -289,12 +291,12 @@
 
             </tbody>
         </table>
-        <div class="contact">
-            <h2>Contact Information</h2>
+    <div class="contact">
+        <h2>Contact me...</h2>
         <p><i class="fas fa-user icon"></i><b>Thisakaran Rasalingam (BICT Hons in Software Eng. (UOK))</b></p>
         <p><i class="fas fa-envelope icon"></i>Email: <a href="mailto:Thisakaranr.ict@gmail.com">Thisakaranr.ict@gmail.com</a></p>
         <p><i class="fas fa-phone icon"></i>Phone: +94 76 830 7957</p>
-        </div>
+    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
