--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
         function showTopStudents() {
-            alert("Congratulations to the top students for this exam:\n1. S.Thilaxshana\n2. S.Milogithan\n3. A.Kirishanth");
+            alert("Congratulations to the top students for this exam:\n1. V.Thuvaraga & S.Thilaxshana\n2. S.Milogithan\n3. A.Kirishanth");
         }
 
         async function generatePDF() {
